Fixes speakers on mobile

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -1025,6 +1025,7 @@
 
 				a{
 					transform: none;
+					opacity: 1;
 				}
 
 				span{
